--- a/app/src/main/res/layout-land/activity_control_inventory_page.xml
+++ b/app/src/main/res/layout-land/activity_control_inventory_page.xml
@@ -24,6 +24,7 @@
             <!-- 어플 뚜껑 코드 -->
 
             <!-- 상단 로고 이미지 -->
+
             <TextView
                 android:id="@+id/textView45"
                 android:layout_width="0dp"
@@ -35,21 +36,23 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView47" />
 
+            <!-- 모드 전환 버튼 -->
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="200dp"
-                android:layout_height="80dp"
+                android:layout_width="203dp"
+                android:layout_height="79dp"
                 android:layout_marginStart="36dp"
-                android:layout_marginTop="10dp"
+                android:scaleType="fitXY"
+                app:layout_constraintBottom_toTopOf="@+id/textView45"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.533"
                 app:srcCompat="@drawable/kobb" />
 
-            <!-- 모드 전환 버튼 -->
             <Button
                 android:id="@+id/btn_Start_kiosk_page"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="120dp"
+                android:layout_height="70dp"
                 android:layout_marginEnd="40dp"
                 android:backgroundTint="#FF5555"
                 android:text="모드전환"
@@ -73,7 +76,7 @@
             <!-- 개인정보 페이지 이동 버튼  -->
             <ImageButton
                 android:id="@+id/btn_User_info_page1"
-                android:layout_width="100dp"
+                android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginEnd="40dp"
@@ -88,7 +91,7 @@
                 android:id="@+id/textView47"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="30dp"
                 android:text="재고 관리"
                 android:textColor="#FF5555"
                 android:textSize="30dp"
@@ -110,21 +113,18 @@
                 app:srcCompat="@drawable/kobbtext" />
             <!-- =============================================== -->
 
-            <!-- 페이징 라이브러리 -->
-
-
             <TableLayout
                 android:id="@+id/tableLayout2"
                 android:layout_width="900dp"
-                android:layout_height="wrap_content"
+                android:layout_height="450dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="30dp"
                 android:layout_marginEnd="8dp"
-                android:layout_marginBottom="100dp"
+                android:background="@drawable/table_temp"
                 android:padding="8dp"
                 android:stretchColumns="*"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.604"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
@@ -136,234 +136,54 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="126dp"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="이름"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="50dp"
+                        android:layout_width="126dp"
+                        android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="가격"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="126dp"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="잔여수량"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="126dp"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="거래처"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="126dp"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="거래처 연락처"
                         android:textSize="24dp" />
-                </TableRow>
-
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <!-- 체크박스1 -->
-
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:text="1"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView48"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView49"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView50"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView51"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <!-- 체크박스2 -->
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/textView53"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:text="2"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView54"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView55"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView56"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView57"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                </TableRow>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <!-- 체크박스3 -->
-                    <CheckBox
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-
-                    <TextView
-                        android:id="@+id/textView60"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:text="3"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView61"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView62"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView63"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView64"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView51"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
                 </TableRow>
 
 
@@ -398,6 +218,7 @@
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:backgroundTint="#FF5555"
                 android:text="1"
                 android:textColor="#FFFFFF"
@@ -410,7 +231,6 @@
                 android:id="@+id/button16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:backgroundTint="#FF5555"
                 android:text="2"
                 android:textColor="#FFFFFF"
@@ -448,38 +268,38 @@
                 android:id="@+id/button19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:layout_marginEnd="100dp"
                 android:backgroundTint="#FF5555"
                 android:text="▶"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="@+id/button17"
                 app:layout_constraintEnd_toStartOf="@+id/button14"
-                app:layout_constraintTop_toTopOf="@+id/button17" />
-
-            <SearchView
-                android:id="@+id/searchView"
-                android:layout_width="420dp"
-                android:layout_height="80dp"
-                android:layout_marginStart="260dp"
-                android:layout_marginTop="10dp"
-                android:queryHint="이름/거래처 입력"
-                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/textView45" />
+                app:layout_constraintHorizontal_bias="0.774"
+                app:layout_constraintStart_toEndOf="@+id/button17"
+                app:layout_constraintTop_toTopOf="@+id/button17"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/button6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="410dp"
+                android:layout_marginTop="10dp"
                 android:backgroundTint="#FF5555"
-                android:text="검색"
+                android:text="조회"
                 android:textColor="#FFFFFF"
                 android:textSize="16dp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="@+id/searchView"
-                app:layout_constraintStart_toStartOf="@+id/searchView"
-                app:layout_constraintTop_toTopOf="@+id/searchView" />
+                app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
+                app:layout_constraintStart_toStartOf="@+id/btn_Start_kiosk_page"
+                app:layout_constraintTop_toTopOf="@+id/textView45" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="224dp" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
