--- a/app/src/main/res/layout-land/activity_control_menu_page.xml
+++ b/app/src/main/res/layout-land/activity_control_menu_page.xml
@@ -121,6 +121,7 @@
                 android:layout_marginTop="100dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="100dp"
+                android:background="@drawable/table_temp"
                 android:padding="8dp"
                 android:stretchColumns="*"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -136,6 +137,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -143,6 +145,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -150,6 +153,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="메뉴이름"
                         android:textSize="24dp" />
@@ -158,6 +162,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="50dp"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="판매가격"
                         android:textSize="24dp" />
@@ -166,6 +171,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="카테고리 분류"
                         android:textSize="24dp" />
@@ -174,6 +180,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="상태"
                         android:textSize="24dp" />
@@ -182,6 +189,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="메뉴 사진"
                         android:textSize="24dp" />
@@ -196,45 +204,42 @@
 
                     <CheckBox
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/table_temp" />
 
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="1"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:id="@+id/textView48"
+                        android:id="@+id/invent_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:id="@+id/textView49"
+                        android:id="@+id/invent_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
                     <TextView
-                        android:id="@+id/textView50"
+                        android:id="@+id/invent_stock"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
-                        android:gravity="center"
-                        android:textSize="24dp" />
-
-                    <TextView
-                        android:id="@+id/textView51"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -242,6 +247,15 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
+                        android:gravity="center"
+                        android:textSize="24dp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -254,13 +268,15 @@
                     <!-- 체크박스2 -->
                     <CheckBox
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/table_temp" />
 
                     <TextView
                         android:id="@+id/textView53"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="2"
                         android:textSize="24dp" />
@@ -270,6 +286,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -278,6 +295,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -286,6 +304,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -294,6 +313,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -301,6 +321,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -313,13 +334,15 @@
                     <!-- 체크박스3 -->
                     <CheckBox
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/table_temp" />
 
                     <TextView
                         android:id="@+id/textView60"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:text="3"
                         android:textSize="24dp" />
@@ -329,6 +352,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -337,6 +361,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -345,6 +370,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -353,6 +379,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -361,6 +388,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="1dp"
+                        android:background="@drawable/table_temp"
                         android:gravity="center"
                         android:textSize="24dp" />
 
@@ -369,25 +397,31 @@
 
             </TableLayout>
 
-            <TextView
+            <Button
                 android:id="@+id/textView65"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="600dp"
                 android:layout_marginBottom="20dp"
+                android:backgroundTint="#FFEAEA"
                 android:text="판매량 높은 순"
+                android:textColor="#000000"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
                 app:layout_constraintStart_toStartOf="@+id/tableLayout2"
                 app:layout_constraintTop_toTopOf="@+id/textView66" />
 
-            <TextView
+            <Button
                 android:id="@+id/textView66"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="20dp"
+                android:backgroundTint="#FFEAEA"
                 android:text="판매량 낮은 순"
+                android:textColor="#000000"
                 android:textSize="18dp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/tableLayout2"
                 app:layout_constraintEnd_toEndOf="@+id/tableLayout2"
                 app:layout_constraintStart_toEndOf="@+id/textView65" />
@@ -421,6 +455,7 @@
                 android:id="@+id/button15"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
                 android:backgroundTint="#FF5555"
                 android:text="1"
                 android:textColor="#FFFFFF"
@@ -433,7 +468,6 @@
                 android:id="@+id/button16"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="20dp"
                 android:backgroundTint="#FF5555"
                 android:text="2"
                 android:textColor="#FFFFFF"
@@ -471,20 +505,55 @@
                 android:id="@+id/button19"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="550dp"
                 android:layout_marginEnd="100dp"
                 android:backgroundTint="#FF5555"
                 android:text="▶"
                 android:textColor="#FFFFFF"
                 app:layout_constraintBottom_toBottomOf="@+id/button17"
                 app:layout_constraintEnd_toStartOf="@+id/button14"
+                app:layout_constraintStart_toEndOf="@+id/button12"
                 app:layout_constraintTop_toTopOf="@+id/button17" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="40dp"
-                android:layout_height="204dp"
-                android:layout_marginTop="50dp"
+                android:id="@+id/recyclerView"
+                android:layout_width="150dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="420dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintEnd_toStartOf="@+id/textView4"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/textView45" />
+
+            <EditText
+                android:id="@+id/textView4"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:background="#FFFFFF"
+                android:backgroundTint="#FFFFFF"
+                android:gravity="center"
+                android:hint="카테고리 추가"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/button5"
+                app:layout_constraintTop_toTopOf="@+id/textView45" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="400dp"
+                android:backgroundTint="#FF5555"
+                android:text="저장"
+                android:textColor="#FFFFFF"
+                android:textSize="25dp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="@+id/textView4"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/textView4" />
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
